Added a portfolio link.

--- a/305/HTMLResume/resume.html
+++ b/305/HTMLResume/resume.html
@@ -24,7 +24,7 @@
         <div class="col-sm-6">Email: mkariuki2@mail.greenriver.edu</div>
         <div class="col-sm-6 text-right" ><a href="https://www.linkedin.com/in/maureen-kariuki-2b3a45167/">LinkedIn</a></div>
         <div class="col-sm-6">Cell: (574) 229 - 7986</div>
-        <div class="col-sm-6 text-right"><a href="https://github.com/maureen44">Portfolio</a></div>
+        <div class="col-sm-6 text-right"><a href="https://github.com/maureen44/Porfolio">Portfolio</a></div>
     </div>
 </div>
 
