Made some changes.

--- a/305/index.html
+++ b/305/index.html
@@ -29,14 +29,12 @@
                         <h5>
                             I’m currently pursuing my
                             Software Development degree
-                            at Green River College.As
-                            a Software Developer,
-                            implementing new ideas
-                            and making a positive
-                            change. I strive to develop
-                            myself, expand my
-                            knowledge, and acquire
-                            additional skills.</h5><!--closing p tag-->
+                            at Green River College.As a
+                            Software Developer, I strive
+                            to expand my knowledge, acquire
+                            additional skills, and make a
+                            positive change such as creating
+                            accessibility.</h5><!--closing p tag-->
 
                     </div><!--closing col-sm div-->
                 </div><!--closing card-columns div-->
